--- a/stan-overview/exercises/1.2/Ex_2_slides.Rmd
+++ b/stan-overview/exercises/1.2/Ex_2_slides.Rmd
@@ -16,8 +16,6 @@ The Normal distribution is a continuous probability distribution with two parame
 
 The *standard normal distribution* is the normal distribution with a mean of zero and a variance of one.
 
-Normal distributions are often used to represent a real-valued random variable whose true distribution isn't known.
-
 Stan provides the function `normal_rng` which takes two real-values arguments `mu` and `sigma`
 which specify the location and scale, respectively.  (Note:  `sigma` must be positive).
 This function may only be used in generated quantities block.
@@ -28,23 +26,23 @@ The shape of the probability densities functions for these distributions are all
 however they have more area under the tail of the curve than the Normal does,
 thus the extreme quantiles are farther from the mean.
 For the Cauchy distribution, the area under the tail is infinite!
-These distributions are useful when the amount of variance is unknown.
+These distributions are useful for random variables whose variance is unknown.
 
 Stan provides functions `cauchy_rng`, `student_t_rng`, and `logistic_rng`,
 all of which take location and scale parameters `mu` and `sigma`.
 
 ## The MultiNormal Distribution
 
-The multivariate normal distribution is the extension of the normal distribution of a single random variable
-to a vector of random variables (a "random vector").
+The multivariate normal distribution is the extension of the normal distribution
+of a single random variable to a vector of random variables (a "random vector").
 Each element of a random vector is a variable which is normally distributed,
 i.e., each element is drawn from its own normal distribution with parameters `mu` and `sigma`.
 
-The following code snippet shows how to generate a standard random vector of length N in Stan:
-
+Generating a standard normal random vector in Stan is just like generating a
+standard normal variate, only using a `vector` and a `for` loop:
 ```
 vector[N] rv;
-for (i in 1:N) rv[i] = normal(0, 1);
+for (i in 1:N) rv[i] = normal_rng(0, 1);
 ```
 
 * What is the Expectation of a random variable generated from a standard normal distribution?
@@ -73,8 +71,8 @@ pp = pp + geom_histogram(aes(y = ..density..), bins=50, fill = "darkgrey");
 pp = pp + stat_function(fun = dnorm,
           args = list(mean = mean(xs$rv), sd = sd(xs$rv)), lwd=2, col="red");
 ```
-************************************
 
+***************************************************
 ```{r, echo=FALSE, out.width = "55%"}
 library(knitr)
 include_graphics("ex2_p1.png")
@@ -108,9 +106,13 @@ of `mu` and `sigma`.
 
 ## Exercise 3:  Expectations of the MultiNormal distribution and the curse of dimensionality
 
-* Write a program `gen_std_norm_vector.stan` which generates a standard random vector `X` of length N for some choice of N
-*and* which computes the distance between X and the origin as quantity of interest `dist_to_origin`.
+* Write a program `gen_std_norm_vector.stan` which generates a standard normal random vector `X`
+of length N for some choice of N and computes its distance to the origin vector
+as quantity of interest `dist_to_origin`.
+Generalize this program to compute distance to the origin for
+all standard normal random vectors of length 1 through N.
 
-* Generate an x,y plot for x in 1:256 where x is the length of the random vector X and y is the expectation of the distance to the origin when X is a standard MultiNormal random vector.  (You should be able to write a Stan program which computes the distance to origin for vectors of length 1:256 all in one go.)
+* Generate an x,y plot for x in 1:256 where x is the length of the random vector X and
+y is the expectation of the distance to the origin when X is a standard normal random vector.
 
 
