--- a/stan-overview/exercises/1.2/Ex_1_handout.Rmd
+++ b/stan-overview/exercises/1.2/Ex_1_handout.Rmd
@@ -5,9 +5,9 @@ output:
     pandoc_args: --latex-engine=xelatex
     toc: no
     toc_depth: 4
-  html_document:
-    toc: no
-    toc_depth: 4
+  ioslides_presentation:
+    widescreen: true
+    smaller: true
 ---
 
 ### Nice Dice:  the Platonic Solids
@@ -152,7 +152,7 @@ To access the generated quantity `ans` as a single vector of 4000 outcomes, use 
 ```
 > d20_outcomes = as.vector(as.array(fit_8ball, pars=c("ans")))
 
-# bin the outcomes
+# tabulate the outcomes (number of times rolled "1" ... "20")
 > cts = as.vector(table(d20_outcomes))
 > cts
  [1] 198 195 192 169 216 222 198 213 185 198 226 222 185 212 196 200 185 206 181 201
@@ -193,14 +193,14 @@ include_graphics("ex1_p1.png")
 * Write a program `gen_d6.stan` to simulate one roll of a fair 6-sided die.
     + Use RStan function `stan` to generate a sample consisting of 4000 draws
     + Get the vector of all 4000 outcomes
-    + Bin the outcomes, retrieve observed values for parameter `theta`
+    + Tabulate the outcomes, retrieve observed values for parameter `theta`
 
 ### Exercise 2: Load the die.
 
 * Modify program `gen_d6.stan` so that there is a higher chance of rolling a 6.
     + Use RStan function `stan` to generate a sample consisting of 4000 draws
     + Get the vector of all 4000 outcomes
-    + Bin the outcomes, retrieve observed values for parameter `theta` - do they correspond to your loading of the die?
+    + Tabulate the outcomes, retrieve observed values for parameter `theta` - do they correspond to your loading of the die?
 
 ### Exercise 3: Generate sum of multiple rolls for any platonic solid
 
@@ -208,9 +208,9 @@ The Stan language provides array operations which take arrays as input and produ
 among these are `min`, `max`, `sum`, and many more (see the Stan Reference Manual, section "Array Operations").
 
 * Generalize program `gen_d6.stan` to `gen_rollsN_facesK.stan` so that it outputs the sum of N rolls of any platonic solid with number of faces K.
-    + calculate the expectation of the sum of 4 rolls of a D6
-    + calculate the expectation of the sum of 2 rolls of a D12
-    + use histograms to visualize the distribution of the sums - compare and constrast
+    + Calculate the expectation of the sum of 4 rolls of a D6
+    + Calculate the expectation of the sum of 2 rolls of a D12
+    + Use histograms to visualize the distribution of the sums - compare and constrast
 
 ### Exercise 4: More games
 
@@ -219,5 +219,5 @@ among these are `min`, `max`, `sum`, and many more (see the Stan Reference Manua
 * Compare `gen_best_3_of_4_d6.stan` to the result of running `gen_rollsN_facesK.stan` for 3 rolls of a 6-sided die.
     + Use RStan function `stan` to generate a sample consisting of 4000 draws for each model
     + Get the vector of all 4000 outcomes
-    + use histograms to visualize the distribution of the sums - compare and constrast
+    + Use histograms to visualize the distribution of the sums - compare and constrast
 
