updated overview, cibo

--- a/stan-overview/stan-overview.tex
+++ b/stan-overview/stan-overview.tex
@@ -695,7 +695,7 @@ several potential outcomes
 
 
 
-\sld{Simple Point Estimation}
+\sld{Maximum Likeilihood}
 %
 \begin{itemize}
 \item Estimate chance of success $\theta$ by proportion of successes:
